--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -44,3 +44,8 @@ text {
   font-family: sans-serif;
   font-size: 12px;
 }
+
+.shadow {
+  -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+}
